--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 
+    <link href="https://fonts.googleapis.com/css?family=Zilla+Slab" rel="stylesheet">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Zilla+Slab" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
@@ -21,41 +24,168 @@
     <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+    <nav id="navbar" class="navbar fixed-top navbar-inverse ">
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+        <a class="navbar-brand" href="#">Slimane Hassani</a>
 
-    <!-- Add your site or application content here -->
-    <p>Hello world! This is HTML5 Boilerplate.</p>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
     <!-- Images Type  -->
     <!-- <img src="http://placehold.it/350x150" alt=""> -->
     <!-- Fin Images Type  -->
 
-    <!-- hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh -->
 
-    <!-- Start of header and nav barre  -->
 
-    <nav class="navbar fixed-top navbar-light bg-faded">
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <a class="navbar-brand" href="#">Slimane Hassani</a>
+    <!-- Strat of contenu -->
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+
+
+    <!-- section qui va dispartre -->
+
+
+<!--
+    <section id="block" class="container t-centre m-t-1">
+        <h1>Bienvenue Sur Mon cv en Ligne </h1>
+
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner" role="listbox">
+    <div class="carousel-item active">
+      <img class="d-block img-fluid" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22900%22%20height%3D%22400%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20900%20400%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_15d8853fc4f%20text%20%7B%20fill%3A%23FFFFFF%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A45pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_15d8853fc4f%22%3E%3Crect%20width%3D%22900%22%20height%3D%22400%22%20fill%3D%22%233a5a97%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22333.2109375%22%20y%3D%22220.1%22%3E900x400%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-src="holder.js/900x400?theme=social" alt="900x400" data-holder-rendered="true" style="width: 900px; height: 400px;"> 
+    </div>
+    <div class="carousel-item">
+      <img class="d-block img-fluid" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22900%22%20height%3D%22400%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20900%20400%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_15d8853fc5a%20text%20%7B%20fill%3A%23C2F200%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A45pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_15d8853fc5a%22%3E%3Crect%20width%3D%22900%22%20height%3D%22400%22%20fill%3D%22%23434A52%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22333.2109375%22%20y%3D%22220.1%22%3E900x400%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-src="holder.js/900x400?theme=industrial" alt="900x400" data-holder-rendered="true" style="width: 900px; height: 400px;">
+       </div>
+     <button type="button" class=" wit  btn btn-outline-info">Visité  !</button>
   </div>
-</nav>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+
+    </section>
+
+    -->
+
+
+    <div    class=" droite float-left m-t-1">
+
+      
+        <div id="color"  class="card   text-center annime">
+            <div class="card-block">
+                <blockquote class="card-blockquote">
+                    <img class="img-fluid float-left" src="img/moi.jpg" alt="ma photo">
+                    <h2>Bio</h2>
+                    <p>Slimane Hassani 22 ans Roubaix , célibataire ..</p>
+                    <footer>Objectif <cite title="Source Title">Développement web</cite> 
+                        <br>
+                        <button type="button" class=" annime btn btn-outline-secondary m-t" data-toggle="modal" data-target="#Bio"> En savoirs plus ! 
+</button></footer>
+                </blockquote>
+            </div>
+        </div>
+
+
+
+
+
+        <div id="color" class="card card-inverse  text-center annime ">
+            <div class="card-block">
+                <blockquote class="card-blockquote">
+                    <img class="img-fluid float-left " src="img/slimane.png" alt="avatr ">
+                    <h2>Parcours et CV </h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                    <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
+                </blockquote>
+                <button type="button" class=" annime btn btn-outline-secondary m-t" data-toggle="modal" data-target="#cv">En savoirs plus ! </button>
+            </div>
+        </div>
+
+        <div id="color" class="card card-inverse  text-center annime ">
+            <div class="card-block">
+                <blockquote class="card-blockquote">
+                    <img class="img-fluid float-left" src="http://placehold.it/150x150" alt="">
+                    <h2>Passion et Activité</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                    <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
+                </blockquote>
+            </div>
+        </div>
+
+    </div>
+
+    <!-- debut cart de droite -->
+
+    <div class=" gauche float-right m-t-1  t-centre  t-centre">
+
+      
+
+        <div class="card card-inverse card-warning text-center annime ">
+            <div class="card-block">
+                <blockquote class="card-blockquote">
+                    <img class="img-fluid float-left" src="http://placehold.it/150x150" alt="">
+                    <h2>58854454154</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                    <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
+                </blockquote>
+            </div>
+        </div>
+
+
+        <div class="card card-inverse card-warning text-center annime ">
+            <div class="card-block">
+                <blockquote class="card-blockquote">
+                    <img class="img-fluid float-left" src="http://placehold.it/150x150" alt="">
+                    <h2>58854454154</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                    <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
+                </blockquote>
+            </div>
+        </div>
+
+
+        <div class="card card-inverse card-warning text-center annime ">
+            <div class="card-block">
+                <blockquote class="card-blockquote">
+                    <img class="img-fluid float-left" src="http://placehold.it/150x150" alt="">
+                    <h2>58854454154</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                    <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
+                </blockquote>
+            </div>  <br> <br>
+        </div>
+
+    </div>
+
+
+
+
+
+   
 
 
 
@@ -64,11 +194,38 @@
 
 
 
+    <!-- modiale 1 !!!! -->
 
+    <!-- Modal bio !!  -->
+    <div class="modal" id="Bio" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Bio</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+                </div>
+                <div class="modal-body">
+                    <div class="media">
+                        <img class="d-flex mr-3" data-src="holder.js/64x64?theme=sky" alt="64x64" src="img/moi6.jpg"
+                            data-holder-rendered="true" style="width: 64px; height: 64px;">
+                        <div class="media-body">
+                            <h5 class="mt-0">Slimane Hassani 22 ans Roubaix  célibataire </h5>
+                            Bonjours , Je m'appels Slimane Hassani j'ai 22 ans depuis tout petits je suis passioner par les nouvelles thecnolochie d'une part pour l'utilité et d'un autre coté pour leur 
+Fonctionnement Après des études en Belgique en tant que vendeur j'ai voulu vivre de ma passion j'ai donc entrepris une formation en développement web avec Simplon.co sur Roubaix .
+                        </div>
+                    </div>
 
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
-
-
+    <!--      Fin modial 1 " Bio" -->
 
 
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
