Changement de la nav barre

--- a/index.html
+++ b/index.html
@@ -31,20 +31,9 @@
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"><i class="fa fa-bars" aria-hidden="true"></i></span>
   </button>
-        <div id="css" class="">
+<a class="navbar-brand " href="#">Slimane Hassani</a>
 
-
-
-
-            <a class="navbar-brand " href="#">Slimane Hassani</a>
-
-            <ul class="centre  ">
-                <li> <strong><a href="#"><i class="fa fa-pencil" aria-hidden="true"></i>  Contact</a></li></strong>
-                    <li> <strong><a href="#"> <i class="fa fa-linkedin" aria-hidden="true"></i>  linkedin  </a></li></strong>
-                        <li> <strong><a href="#"> <i class="fa fa-twitter" aria-hidden="true"></i>   Twitter </a></li></strong>
-                        <li><strong><a href="#"> <i class="fa fa-github" aria-hidden="true"></i> Github</a></strong></li>
-        </div>
-
+        
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
@@ -62,6 +51,21 @@
             </ul>
         </div>
     </nav>
+
+
+    <div id="css" class="">
+
+
+
+
+            
+            <ul class="centre fixed-top  ">
+                <li> <strong><a href="#"><i class="fa fa-pencil" aria-hidden="true"></i>  Contact</a></li></strong>
+                    <li> <strong><a href="#"> <i class="fa fa-linkedin" aria-hidden="true"></i>  linkedin  </a></li></strong>
+                        <li> <strong><a href="#"> <i class="fa fa-twitter" aria-hidden="true"></i>   Twitter </a></li></strong>
+                        <li><strong><a href="#"> <i class="fa fa-github" aria-hidden="true"></i> Github</a></strong></li>
+        </div>
+
 
     <!-- Images Type  -->
     <!-- <img src="" alt=""> -->
