Changement de la navbarre

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 
             
-            <ul class="centre fixed-top  ">
+            <ul class="centre fixed-top m-t-1  ">
                 <li> <strong><a href="#"><i class="fa fa-pencil" aria-hidden="true"></i>  Contact</a></li></strong>
                     <li> <strong><a href="#"> <i class="fa fa-linkedin" aria-hidden="true"></i>  linkedin  </a></li></strong>
                         <li> <strong><a href="#"> <i class="fa fa-twitter" aria-hidden="true"></i>   Twitter </a></li></strong>
